--- a/booking-platforms.css
+++ b/booking-platforms.css
@@ -33,7 +33,7 @@ body {
 /* Section Heading */
 .section-heading {
   font-size: 1.8rem;  
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 2rem;
 }
 
