--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,6 @@
 /*CTA FOOTER BASE STYLES */
 .cta-footer {
-  background-color: #b1dbf6; 
+  background-color: #eaf1ff; 
   color: #000000;
   font-family: Arial, sans-serif;
   text-align: center;
@@ -25,7 +25,7 @@
 
 .cta-button {
   display: inline-block;
-  background-color: #4a46f7; 
+  background-color: #2D6CDF; 
   color: #ffffff;
   text-decoration: none;
   padding: 0.8rem 1.6rem;
@@ -36,7 +36,7 @@
 }
 
 .cta-button:hover {
-  background-color: #635df5;
+  background-color: #243ab3;
 }
 
 /*****************************
