--- a/why-lumi.css
+++ b/why-lumi.css
@@ -2,7 +2,7 @@
   WHY LUMI SECTION
 ****************************************/
 .why-lumi {
-  padding: 10px 7rem 0px 7rem;
+  padding: 15px 7rem 0px 7rem;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -10,7 +10,7 @@
 .why-lumi h4 {
   font-size: 2rem;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   font-weight: 600;
 }
 
@@ -167,6 +167,10 @@
     flex-direction: column; 
     gap: 1rem;
   }
+
+  .outbound-calls{
+    margin-bottom: 27px;
+  }
   .arrow {
     display: none;
   }
@@ -174,18 +178,20 @@
   .outbound-text,
   .inbound-text {
     align-items: center;
-    max-width: 100%;
+    max-width: 30%;
     text-align: center;
   }
 
   .outbound-text h2,
   .inbound-text h2 {
     font-size: 1.6rem;
+    margin-bottom: 0rem;
   }
 
   .outbound-text p,
   .inbound-text p {
     font-size: 0.95rem;
+    margin-bottom: 0.3rem;
   }
   
   .card {
