--- a/faq.css
+++ b/faq.css
@@ -14,7 +14,7 @@ body {
 }
 
 .faq-section{
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 70px;
 }
 
@@ -25,10 +25,11 @@ body {
 }
 
 .faq-container h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
   color: #1a1a1a;
   margin-bottom: 2rem;
+  font-weight: 600;
 }
 
 .faq-item {
