Minor styling fix

--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,6 @@
 /*CTA FOOTER BASE STYLES */
 .cta-footer {
-  background-color: #eaf1ff; 
+  background-color: #ceddfb; 
   color: #000000;
   font-family: Arial, sans-serif;
   text-align: center;
