--- a/header.css
+++ b/header.css
@@ -35,6 +35,7 @@ header p{
 .cta-btns{
   display: flex;
   gap: 10px;
+  margin-left: 70px;  /* To make up for the new arrow div added */
 }
 
 .cta-btns a{
@@ -89,6 +90,48 @@ header p{
 }
 
 
+/* Arrows */
+
+.efficient-arrow{
+}
+.efficient-arrow p{
+  position: relative;
+  left: 40px;
+  top: 27px;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+
+.efficient-arrow div{
+  position: relative;
+  bottom: 10px;
+  right: 7px;
+  width: 20px;
+  height: 20px;
+}
+.efficient-arrow div img{
+  height: 100%;
+}
+
+/* .not-convinced{
+  display: none;
+}
+.not-convinced p{
+  font-size: 0.8rem;
+  position: relative;
+  left: 40px;
+  top: 27px;
+}
+
+.arrow-div{
+  width: 20px;
+  height: 20px;
+}
+.arrow-div img {
+  object-fit: cover;
+  height: 100%;
+} */
+
 /* Slide-Up First Animation */
 @keyframes slideUp {
   0% {
@@ -123,6 +166,24 @@ header p{
 .slide-up2 {
   opacity: 0;                      
   animation: slideUp 1s ease forwards;
+}
+
+/* Slide-Up First Animation */
+@keyframes slideUp2-3 {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-up2-3 {
+  opacity: 0;                      /* hidden initially */
+  animation: slideUp 1.2s ease forwards;
+  /* The "forwards" keyword keeps the element at its final state */
 }
 
 
